# az700-exam-coach

./: AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md  instructions.md
.github/instructions/: azure-docs.instructions.md  labs.instructions.md  questions.instructions.md  scoring.instructions.md  sources.instructions.md
.github/prompts/: az700-coach.prompt.md  build-study-plan.prompt.md  explain-topic.prompt.md  generate-lab.prompt.md  generate-mock-exam.prompt.md  generate-quiz.prompt.md  grade-answers.prompt.md  initialise-agent.prompt.md  refresh-blueprint.prompt.md
agents/: evaluator.agent.md  exam-analyst.agent.md  exam-simulator.agent.md  lab-designer.agent.md  orchestrator.agent.md  question-writer.agent.md  source-curator.agent.md  study-coach.agent.md  theory-tutor.agent.md
knowledge/: approved-sources.md  approved-sources.yaml  exam-blueprint.yaml  learner-profile.yaml  mistake-log.yaml  question-taxonomy.yaml  topic-map.yaml
outputs/labs/: README.md
outputs/mock-exams/: README.md
outputs/quizzes/: README.md  quiz-expressroute.md
outputs/study-plans/: README.md
outputs/topic-reviews/: README.md
src/: cli.py
src/az700_agent/: __init__.py  blueprint_loader.py  lab_generator.py  mistake_tracker.py  quiz_generator.py  scoring.py  source_registry.py  study_planner.py
src/az700_certification_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_blueprint_loader.py  test_mistake_tracker.py  test_scoring.py
